# rusty_os

./: Cargo.toml  README.md
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
src/arch/: gdt.rs  interrupts.rs  pic.rs
src/drivers/: keyboard.rs  mod.rs  serial.rs
src/drivers/uart/: mmio.rs  mod.rs  port.rs
src/memory/: mod.rs
src/memory/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
src/task/: executor.rs  mod.rs
tests/: basic_boot.rs  heap_allocation.rs  stack_overflow.rs
