[package]
name = "rusty_os"
version = "0.1.0"
edition = "2018"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300

[profile.release]
panic = "abort"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bitflags = "2.9.0"
bootloader = { version = "0.9.0", features = ["map_physical_memory"]}
conquer-once = { version = "0.4.0", default-features = false }
crossbeam-queue = { version = "0.3.12", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
pc-keyboard = "0.8.0"
spin = "0.9.8"
volatile = "0.3.0"
x86 = "0.52.0"
x86_64 = "0.14.1"
